--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -18,6 +18,7 @@
 # Rubén Porras Campo <nahoo@inicia.es>, 2005
 # Omar Campagne <ocampagne@gmail.com>, 2010
 # Javier Fernández-Sanguino <jfs@debian.org>, 2003-2012, 2014-2018, 2020
+# Camaleón <noelamac@gmail.com>, 2022.
 #
 # Equipo de traducción al español, por favor lean antes de traducir
 # los siguientes documentos:
@@ -58,14 +59,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2020-08-23 19:21+0200\n"
-"Last-Translator: Javier Fernández-Sanguino <jfs@debian.org>\n"
-"Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"PO-Revision-Date: 2023-02-11 16:42+0000\n"
+"Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
+"Language-Team: Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -125,7 +127,7 @@ msgstr "Analizando el repositorio de programas migrados..."
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Retry"
 msgstr "Reintentar"
 
@@ -134,7 +136,7 @@ msgstr "Reintentar"
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Ignore"
 msgstr "Ignorar"
 
@@ -217,7 +219,7 @@ msgstr "actualizaciones de seguridad (de ${SEC_HOST})"
 #. :sl1:
 #: ../apt-setup-udeb.templates:11001
 msgid "release updates"
-msgstr "actualizaciones de la distribución:"
+msgstr "actualizaciones de la distribución"
 
 #. Type: multiselect
 #. Choices
@@ -449,7 +451,7 @@ msgstr "Deshabilitando el CD «netinst» del archivo sources.list..."
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:6001
+#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:7001
 msgid ""
 "If you are installing from a netinst CD image and choose not to use a "
 "mirror, you will end up with only a very minimal base system."
@@ -565,27 +567,30 @@ msgstr "Analizando la réplica..."
 
 #. Type: boolean
 #. Description
-#. :sl1:
+#. :sl5:
 #: ../apt-mirror-setup.templates:2001
-msgid "Use non-free software?"
-msgstr "¿Usar software no libre?"
+msgid "Use non-free firmware?"
+msgstr "¿Usas un firmware no libre?"
 
 #. Type: boolean
 #. Description
-#. :sl1:
+#. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid ""
-"Some non-free software has been made to work with Debian. Though this "
-"software is not at all a part of Debian, standard Debian tools can be used "
-"to install it. This software has varying licenses which may prevent you from "
+"Some non-free firmware has been made to work with Debian. Though this "
+"firmware is not at all a part of Debian, standard Debian tools can be used "
+"to install it. This firmware has varying licenses which may prevent you from "
 "using, modifying, or sharing it."
 msgstr ""
-"Hay software no libre que se ha podido hacer funcionar con\n"
-"Debian. Aunque este software no es parte de Debian, se pueden usar las\n"
-"herramientas estándar de Debian para instalarlo. Este software tiene\n"
-"licencias variadas que pueden prohibirle usarlo, modificarlo o\n"
+"Se han hecho algunos firmwares que no son libres para que funcionen con "
+"Debian. Aunque este firmware no es en absoluto parte de Debian, pueden "
+"usarse las herramientas estándar de Debian para instalarlo. Este firmware "
+"tiene varias licencias que pueden impedirle usarlo, modificarlo o "
 "compartirlo."
 
+#. Type: boolean
+#. Description
+#. :sl5:
 #. Type: boolean
 #. Description
 #. :sl1:
@@ -593,7 +598,8 @@ msgstr ""
 #. Description
 #. This template is used by the Ubuntu version of d-i.
 #. :sl2:
-#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates-ubuntu:1001
+#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "Por favor, elija si, aún así, quiere tenerlo disponible."
 
@@ -601,23 +607,45 @@ msgstr "Por favor, elija si, aún así, quiere tenerlo disponible."
 #. Description
 #. :sl1:
 #: ../apt-mirror-setup.templates:3001
-msgid "Use contrib software?"
-msgstr "¿Usar software contrib?"
+msgid "Use non-free software?"
+msgstr "¿Usar software no libre?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-mirror-setup.templates:3001
 msgid ""
+"Some non-free software has been made to work with Debian. Though this "
+"software is not at all a part of Debian, standard Debian tools can be used "
+"to install it. This software has varying licenses which may prevent you from "
+"using, modifying, or sharing it."
+msgstr ""
+"Se ha hecho software no libre para que funcione con Debian. Aunque este "
+"software no es en absoluto parte de Debian, pueden usarse las herramientas "
+"estándar de Debian para instalarlo. Este software tiene diferentes licencias "
+"que pueden impedirle usarlo, modificarlo o compartirlo."
+
+#. Type: boolean
+#. Description
+#. :sl1:
+#: ../apt-mirror-setup.templates:4001
+msgid "Use contrib software?"
+msgstr "¿Usar software contrib?"
+
+#. Type: boolean
+#. Description
+#. :sl1:
+#: ../apt-mirror-setup.templates:4001
+msgid ""
 "Some additional software has been made to work with Debian. Though this "
 "software is free, it depends on non-free software for its operation. This "
 "software is not a part of Debian, but standard Debian tools can be used to "
 "install it."
 msgstr ""
-"Hay software adicional que se ha hecho funcionar con Debian. Aunque\n"
-"este software es libre, depende de software no libre para su\n"
-"funcionamiento. Este software no es parte de Debian, pero se pueden\n"
-"usar las herramientas estándar de Debian para instalarlo."
+"Se ha hecho algún software adicional para que funcione con Debian. Aunque "
+"este software es libre, depende de software no libre para su funcionamiento. "
+"Este software no forma parte de Debian, pero pueden usarse las herramientas "
+"estándar de Debian para instalarlo."
 
 #. Type: boolean
 #. Description
@@ -638,7 +666,7 @@ msgstr ""
 #. Description
 #. This template is used by the Ubuntu version of d-i.
 #. :sl2:
-#: ../apt-mirror-setup.templates:3001 ../apt-mirror-setup.templates-ubuntu:2001
+#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
 #: ../apt-mirror-setup.templates-ubuntu:3001
 #: ../apt-mirror-setup.templates-ubuntu:4001
 #: ../apt-mirror-setup.templates-ubuntu:5001
@@ -651,21 +679,21 @@ msgstr "Por favor, elija si quiere tener este software disponible."
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-mirror-setup.templates:4001
+#: ../apt-mirror-setup.templates:5001
 msgid "Change mirror"
 msgstr "Cambiar de réplica"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid "Downloading a file failed:"
 msgstr "Falló la descarga de un fichero:"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid ""
 "The installer failed to access the mirror. This may be a problem with your "
 "network, or with the mirror. You can choose to retry the download, select a "
@@ -680,14 +708,14 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
+#: ../apt-mirror-setup.templates:6001
 msgid "Use a network mirror?"
 msgstr "¿Desea utilizar una réplica en red?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
+#: ../apt-mirror-setup.templates:6001
 msgid ""
 "A network mirror can be used to supplement the software that is included on "
 "the installation media. This may also make newer versions of software "
@@ -700,14 +728,14 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "Continue without a network mirror?"
 msgstr "¿Desea continuar sin una réplica en red?"
 
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "No se seleccionó ninguna réplica en red."
 
