--- a/debian/po/kk.po
+++ b/debian/po/kk.po
@@ -8,7 +8,7 @@
 # This file is distributed under the same license as debian-installer.
 #
 # Talgat Daniyarov
-# Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2008-2017
+# Baurzhan Muftakhidinov <baurthefirst@gmail.com>, 2008-2022
 # Dauren Sarsenov <daur88@inbox.ru>, 2008, 2009
 #
 # Translations from iso-codes:
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2018-12-02 20:16+0500\n"
+"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"PO-Revision-Date: 2022-12-04 17:19+0600\n"
 "Last-Translator: Baurzhan Muftakhidinov <baurthefirst@gmail.com>\n"
 "Language-Team: Kazakh\n"
 "Language: kk\n"
@@ -89,7 +89,7 @@ msgstr "Бэкпорттар репозиторийі қаралуда..."
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Retry"
 msgstr "Қайталау"
 
@@ -98,7 +98,7 @@ msgstr "Қайталау"
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Ignore"
 msgstr "Елемеу"
 
@@ -197,7 +197,7 @@ msgstr "бэкпортталған БҚ"
 #. :sl1:
 #: ../apt-setup-udeb.templates:11002
 msgid "Services to use:"
-msgstr "Қолданылатын сервистер:"
+msgstr "Қолданылатын қызметтер:"
 
 #. Type: multiselect
 #. Description
@@ -282,9 +282,8 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:1001
-#, fuzzy
 msgid "Scanning the installation media..."
-msgstr "Орнату аяқталуда"
+msgstr "Орнату тасушысы сканерленуде..."
 
 #. Type: error
 #. Description
@@ -300,13 +299,12 @@ msgstr "apt баптауында қиындықтар бар"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:2001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid ""
 "An attempt to configure apt to install additional packages from the media "
 "failed."
 msgstr ""
-"Apt бағдарламасын компакт-дискіден қосымша дестелерді орнату үшін баптау "
-"сәтсіз аяқталды."
+"Apt бағдарламасын бейнеден қосымша дестелерді орнату үшін баптау сәтсіз "
+"аяқталды."
 
 #. Type: boolean
 #. Description
@@ -322,31 +320,29 @@ msgstr ""
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
 #: ../apt-cdrom-setup.templates:5001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Scan extra installation media?"
-msgstr "SILO-ны орнату сәтсіз аяқталды"
+msgstr "Қосымша орнату тасушысын сканерлеу керек пе?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
 msgid "Scanning your installation media finds the label:"
-msgstr ""
+msgstr "Орнату тасушысын сканерлеу келесі белгіні тапты:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
-#, fuzzy
 msgid ""
 "You now have the option of scanning additional media for use by the package "
 "manager (apt). Normally these should be from the same set as the one you "
 "booted from. If you do not have any additional media, this step can just be "
 "skipped."
 msgstr ""
-"Қазір қосымша CD/DVD дисктерді дестелер менеджері (apt) арқылы қарап "
-"шығуыңызға болады. Әдетте бұл орнату CD/DVD дисктердің жинағы болады. Егер "
-"сізде қосымша CD не DVD дисктері болмаса, осы қадамды өткізсеңіз де болады."
+"Қазір қосымша тасушыларды дестелер менеджері (apt) арқылы қарап шығуыңызға "
+"болады. Әдетте ол сіз жүктелген тасушы жинағының өзі болады. Егер сізде "
+"қосымша тасушылар болмаса, осы қадамды өткізсеңіз де болады."
 
 #. Type: boolean
 #. Description
@@ -355,42 +351,36 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "If you wish to scan more media, please insert another one now."
-msgstr "Басқа CD немесе DVD дискіні қарап шығу керек болса, оны қазір салыңыз."
+msgstr "Көбірек тасушыны қарап шығу керек болса, оны қазір салыңыз."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "The image with the following label has been scanned:"
-msgstr "CD немесе DVD дискі қаралды, оның белгісі:"
+msgstr "Келесі белгісі бар бейне сканерленді:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "The image with the following label has already been scanned:"
-msgstr "CD немесе DVD дискі бұрын қаралған, оның белгісі:"
+msgstr "Келесі белгісі бар бейне бұрын сканерленді:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "Please replace it now, if you wish to scan another."
-msgstr ""
-"Басқа CD немесе DVD дискіні қарап шығу керек болса, оны қазір ауыстырыңыз."
+msgstr "Басқа тасушыны қарап шығу керек болса, оны қазір ауыстырыңыз."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Please check that the media has been inserted correctly."
-msgstr "CD/DVD дискі дұрыс салынғанына көз жеткізіңіз."
+msgstr "Тасушы дұрыс салынғанына көз жеткізіңіз."
 
 #. Type: text
 #. Description
@@ -403,11 +393,8 @@ msgstr "Дискіні ауыстыру"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:7001
-#, fuzzy
 msgid "Please insert the media labeled '${LABEL}' and press enter."
-msgstr ""
-"/cdrom/: '${LABEL}' деп белгіленген дискіні '/cdrom/' диск оқу құрылғысына "
-"салып, enter басыңыз."
+msgstr "'${LABEL}' деп белгіленген тасушыны салып, enter басыңыз."
 
 #. Type: text
 #. Description
@@ -423,13 +410,12 @@ msgstr "Netinst CD sources.list файлынан өшіру..."
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:6001
-#, fuzzy
+#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:7001
 msgid ""
 "If you are installing from a netinst CD image and choose not to use a "
 "mirror, you will end up with only a very minimal base system."
 msgstr ""
-"Егер орнату netinst CD дискінен жүргізілсе, және сіз желідегі серверді "
+"Егер орнату netinst CD бейнесінен жүргізілсе, және сіз желідегі серверді "
 "(айна) қолдануды таңдамасаңыз, орнату нәтижесінде минималды мүмкіндігі бар "
 "базалық жүйені аласыз."
 
@@ -437,40 +423,36 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:10001
-#, fuzzy
 msgid ""
 "You are installing from a netinst CD image, which by itself only allows "
 "installation of a very minimal base system. Use a mirror to install a more "
 "complete system."
 msgstr ""
-"Сіз орнатуды CD дискінен жүргізіп тұрсыз, нәтижесінде минималды мүмкіндігі "
-"бар базалық жүйені аласыз. Жүйені толығырақ орнату үшін желідегі сервер "
-"(айна) қолдануыңыз керек."
+"Сіз орнатуды netinst CD бейнесінен жүргізіп тұрсыз, нәтижесінде минималды "
+"мүмкіндігі бар базалық жүйені аласыз. Жүйені толығырақ орнату үшін желідегі "
+"сервер (айна) қолдануыңыз керек."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:11001
-#, fuzzy
 msgid ""
 "You are installing from an image which contains a limited selection of "
 "packages."
-msgstr ""
-"Сіз орнатуды CD дискіден жүргізіп отырсыз, ол дискіде дестелер жиыны "
-"шектелген."
+msgstr "Сіз орнатуды бейнеден жүргізіп отырсыз, оның дестелер жиыны шектелген."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be 2 or 3
 #: ../apt-cdrom-setup.templates:12001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a fair selection of "
 "packages, some may be missing (notably some packages needed to support "
 "languages other than English)."
 msgstr ""
-"Сіз %i CD дискіні қарап шықтыңыз. Олардығы дестелер жиыны үлкен болса да, "
+"Сіз %i бейнені қарап шықтыңыз. Олардағы дестелер жиыны үлкен болса да, "
 "кейбір дестелер жоқ болуы мүмкін (әсіресе, ағылшыннан басқа тіл қолдауын "
 "ұсынатын дестелер)."
 
@@ -479,12 +461,12 @@ msgstr ""
 #. :sl1:
 #. The value of %i can be from 4 to 8
 #: ../apt-cdrom-setup.templates:13001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a large selection of "
 "packages, some may be missing."
 msgstr ""
-"Сіз %i CD дискіні қарап шықтыңыз. Олардағы дестелер жиыны үлкен болғанымен, "
+"Сіз %i бейнені қарап шықтыңыз. Олардағы дестелер жиыны үлкен болғанымен, "
 "кейбір дестелер жоқ болуы мүмкін."
 
 #. Type: text
@@ -502,12 +484,11 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:15001
-#, fuzzy
 msgid ""
 "You are installing from a DVD image. Even though it contains a large "
 "selection of packages, some may be missing."
 msgstr ""
-"Сіз DVD дискіден орнатуды таңдадыңыз. DVD құрамында дестелер жиыны үлкен "
+"Сіз DVD бейнесінен орнатуды таңдадыңыз. DVD құрамында дестелер жиыны үлкен "
 "болғанымен, сонда да кейбір дестелер жоқ болуы мүмкін."
 
 #. Type: text
@@ -538,19 +519,64 @@ msgstr ""
 #. :sl1:
 #: ../apt-mirror-setup.templates:1001
 msgid "Scanning the mirror..."
-msgstr "Айнаны қарау..."
+msgstr "Айнаны сканерлеу..."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+#, fuzzy
+#| msgid "Use non-free software?"
+msgid "Use non-free firmware?"
+msgstr "Еркін емес (non-free) бағдарламаларды пайдалауды қалайсыз ба?"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+#, fuzzy
+#| msgid ""
+#| "Some non-free software has been made to work with Debian. Though this "
+#| "software is not at all a part of Debian, standard Debian tools can be "
+#| "used to install it. This software has varying licenses which may prevent "
+#| "you from using, modifying, or sharing it."
+msgid ""
+"Some non-free firmware has been made to work with Debian. Though this "
+"firmware is not at all a part of Debian, standard Debian tools can be used "
+"to install it. This firmware has varying licenses which may prevent you from "
+"using, modifying, or sharing it."
+msgstr ""
+"Debian үшін біраз еркін емес (non-free) бағдарламалық қамтама жасалған. Олар "
+"Debian бөлігі болмағанымен, орнатуға болады. Бағдарламалық қамтаманың  "
+"лицензиясы да әр түрлі болуы мүмкін, сонымен қатар сізді пайдалануға, "
+"өзгертуге, таратуға шектеуі мүмкін."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#. Type: boolean
+#. Description
+#. :sl1:
+#. Type: boolean
+#. Description
+#. This template is used by the Ubuntu version of d-i.
+#. :sl2:
+#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates-ubuntu:1001
+msgid "Please choose whether you want to have it available anyway."
+msgstr "Осы БҚ сізге қолжетерлік бола ма, соны таңдаңыз."
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:2001
+#: ../apt-mirror-setup.templates:3001
 msgid "Use non-free software?"
 msgstr "Еркін емес (non-free) бағдарламаларды пайдалауды қалайсыз ба?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:2001
+#: ../apt-mirror-setup.templates:3001
 msgid ""
 "Some non-free software has been made to work with Debian. Though this "
 "software is not at all a part of Debian, standard Debian tools can be used "
@@ -565,25 +591,14 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Please choose whether you want to have it available anyway."
-msgstr "Осы БҚ сізге қолжетерлік бола ма, соны таңдаңыз."
-
-#. Type: boolean
-#. Description
-#. :sl1:
-#: ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates:4001
 msgid "Use contrib software?"
 msgstr "Contrib бөлімінен бағдарламалық қамтамасын қолдану керек пе?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Some additional software has been made to work with Debian. Though this "
 "software is free, it depends on non-free software for its operation. This "
@@ -613,7 +628,7 @@ msgstr ""
 #. Description
 #. This template is used by the Ubuntu version of d-i.
 #. :sl2:
-#: ../apt-mirror-setup.templates:3001 ../apt-mirror-setup.templates-ubuntu:2001
+#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
 #: ../apt-mirror-setup.templates-ubuntu:3001
 #: ../apt-mirror-setup.templates-ubuntu:4001
 #: ../apt-mirror-setup.templates-ubuntu:5001
@@ -626,21 +641,21 @@ msgstr "Осы БҚ сізге қолжетерлік бола ма, соны т
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-mirror-setup.templates:4001
+#: ../apt-mirror-setup.templates:5001
 msgid "Change mirror"
 msgstr "Айна ауыстыру"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid "Downloading a file failed:"
 msgstr "Файлды жүктеу мүмкін болмады:"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid ""
 "The installer failed to access the mirror. This may be a problem with your "
 "network, or with the mirror. You can choose to retry the download, select a "
@@ -654,34 +669,33 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
+#: ../apt-mirror-setup.templates:6001
 msgid "Use a network mirror?"
 msgstr "Желідегі дестелер көзін қолданамыз ба?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
-#, fuzzy
+#: ../apt-mirror-setup.templates:6001
 msgid ""
 "A network mirror can be used to supplement the software that is included on "
 "the installation media. This may also make newer versions of software "
 "available."
 msgstr ""
-"Желідегі БҚ көзі CD-ROM дискідегі БҚ-ға қосымша ретінде қолданыла алады. "
+"Желідегі БҚ көзі орнату тасушысындағы БҚ-ға қосымша ретінде қолданыла алады. "
 "Сонымен қатар онда БҚ жаңа нұсқалары болуы мүмкін.."
 
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "Continue without a network mirror?"
 msgstr "Желідегі дестелер айнасысыз жалғастырамыз ба?"
 
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Желідегі дестелер айнасы таңдалмаған."
 
