--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -9,6 +9,7 @@
 #
 # Georgi Stanojevski, <glisha@gmail.com>, 2004, 2005, 2006.
 # Georgi Stanojevski <georgis@unet.com.mk>, 2005, 2006.
+# Kristijan Fremen Velkovski <me@krisfremen.com>, 2023.
 #
 # Translations from iso-codes:
 #   Alastair McKinstry <mckinstry@computer.org>, 2002
@@ -23,9 +24,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po_sublevel1_mk\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2019-08-28 18:10+0000\n"
-"Last-Translator: leela <53352@protonmail.com>\n"
+"POT-Creation-Date: 2023-01-23 20:01+0000\n"
+"PO-Revision-Date: 2023-03-28 01:50+0000\n"
+"Last-Translator: Kristijan Fremen Velkovski <me@krisfremen.com>\n"
 "Language-Team: Macedonian <>\n"
 "Language: mk\n"
 "MIME-Version: 1.0\n"
@@ -83,16 +84,15 @@ msgstr "Скенирам складиште за надградби..."
 #. Description
 #. :sl2:
 #: ../apt-setup-udeb.templates:7001
-#, fuzzy
 msgid "Scanning the backports repository..."
-msgstr "Скенирам складиште за надградби..."
+msgstr "Скенирање на складиште за задни порти..."
 
 #. Type: select
 #. Choices
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Retry"
 msgstr "Повторно"
 
@@ -101,7 +101,7 @@ msgstr "Повторно"
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:4001
+#: ../apt-setup-udeb.templates:8001 ../apt-mirror-setup.templates:5001
 msgid "Ignore"
 msgstr "Игнорирај"
 
@@ -192,9 +192,8 @@ msgstr "Надградби за изданието"
 #. including host name. In short, KEEP THIS SHORT and, yes, that's tricky
 #. :sl1:
 #: ../apt-setup-udeb.templates:11001
-#, fuzzy
 msgid "backported software"
-msgstr "Да користам прилагоден софтвер?"
+msgstr "Софтвер портиран на порана верзија"
 
 #. Type: multiselect
 #. Description
@@ -244,7 +243,6 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-setup-udeb.templates:11002
-#, fuzzy
 msgid ""
 "Backported software are adapted from the development version to work with "
 "this release. Although this software has not gone through such complete "
@@ -253,17 +251,19 @@ msgid ""
 "not cause any of them to be installed by default; it only allows you to "
 "manually select backports to use."
 msgstr ""
-"Некои програми се прилагодени од дрвото за развој за да работат со ова "
+"Некои програми се прилагодени од развојното дрво за да работат со ова "
 "издание. Иако овие програми не поминале низ толку целосен режим на тестирање "
 "како оние од ова издание, тие вклучуваат понови верзии на некои програми кои "
-"можеби имаат нови корисни можности."
+"можеби имаат нови корисни можности. Вклучувањето на задните порти нема да ги "
+"нормално инсталира; само дозволува да ги рачно одберете кои задни порти "
+"сакате да ги користите."
 
 #. Type: boolean
 #. Description
 #. :sl3:
 #: ../apt-setup-udeb.templates:12001
 msgid "Enable source repositories in APT?"
-msgstr ""
+msgstr "Вклучите изборни складишта во APT?"
 
 #. Type: boolean
 #. Description
@@ -275,14 +275,17 @@ msgid ""
 "you don't need this feature, you can disable those entries and save some "
 "bandwidth during \"apt-get update\" operations."
 msgstr ""
+"По стандард, изворните складишта се наведени во /etc/apt/sources.list (со "
+"соодветни линии \"deb-src\"), така што \"apt-get source\" работи. Меѓутоа, "
+"ако не ви е потребна оваа функција, можете да ги извадите тие записи и да "
+"заштедите на интернет за време на операциите \"apt-get update\"."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:1001
-#, fuzzy
 msgid "Scanning the installation media..."
-msgstr "Ја завршувам инсталацијата"
+msgstr "Скенирање на медија за инсталација..."
 
 #. Type: error
 #. Description
@@ -298,13 +301,12 @@ msgstr "Проблем при конфигурација на apt"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:2001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid ""
 "An attempt to configure apt to install additional packages from the media "
 "failed."
 msgstr ""
-"Не успеа обидот да се конфигурира apt за да инсталира дополнителни пакети од "
-"ЦД."
+"Обидот да се подеси apt да инсталира дополнителни пакети од медијата не "
+"успеа."
 
 #. Type: boolean
 #. Description
@@ -320,32 +322,30 @@ msgstr ""
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
 #: ../apt-cdrom-setup.templates:5001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Scan extra installation media?"
-msgstr "Инсталацијата на SILO не успеа"
+msgstr "Скенирај додатна медија за инсталација?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
 msgid "Scanning your installation media finds the label:"
-msgstr ""
+msgstr "Скенирање на вашата инсталациска медија, се пронајде ознаката:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
-#, fuzzy
 msgid ""
 "You now have the option of scanning additional media for use by the package "
 "manager (apt). Normally these should be from the same set as the one you "
 "booted from. If you do not have any additional media, this step can just be "
 "skipped."
 msgstr ""
-"Имате опција да скенирате додатни CD-а или DVD-а кои што би се користеле со "
-"менаџерот за пакети (apt). Обично овие медимуи треба да се исти со "
-"инсталационите CD-а/DVD-а. Ако немате дополнителни медиуми можете да го "
-"скокнете овој чекор."
+"Имате опција да скенирате додатни медиуми кои што би се користеле со "
+"менаџерот за пакети (apt). Обично овие медиуми треба да се од истот сет од "
+"кои што бутиравте. Ако немате дополнителни медиуми можете да го прескокнете "
+"овој чекор."
 
 #. Type: boolean
 #. Description
@@ -354,41 +354,36 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "If you wish to scan more media, please insert another one now."
-msgstr "Ако сакате да скенирате друго CD или DVD, Ве молам внесете го сега."
+msgstr "Ако сакате да скенирате повеќе медиуми, молиме внесете еден сега."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "The image with the following label has been scanned:"
-msgstr "CD или DVD со оваа ознака е веќе скенирано:"
+msgstr "Сликата со следната ознака беше скенирана:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "The image with the following label has already been scanned:"
-msgstr "CD или DVD со оваа ознака е веќе скенирано."
+msgstr "Сликата со следната ознака претходно беше скенирана:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "Please replace it now, if you wish to scan another."
-msgstr "Ве молам заменете го сега ако сакате да скенирате друго CD или DVD."
+msgstr "Молиме заменете го сега, ако сакате да скенирате уште еднаш."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Please check that the media has been inserted correctly."
-msgstr "Ве молам осигурајте се CD/DVD-то е внесено како што треба."
+msgstr "Ве молиме провете дека медиумот беше внесен како што треба."
 
 #. Type: text
 #. Description
@@ -401,11 +396,8 @@ msgstr "Промена на медиум"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:7001
-#, fuzzy
 msgid "Please insert the media labeled '${LABEL}' and press enter."
-msgstr ""
-"/cdrom/: Ве молам внесете го дискот со ознаката '${LABEL}' во уредот '/"
-"cdrom/' и притиснете Ентер."
+msgstr "Молиме внесете ја медијата означена '${LABEL}' и притиснете ентер."
 
 #. Type: text
 #. Description
@@ -421,66 +413,62 @@ msgstr "Го исклучувам netisnt CD-то во sources.list..."
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:6001
-#, fuzzy
+#: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:7001
 msgid ""
 "If you are installing from a netinst CD image and choose not to use a "
 "mirror, you will end up with only a very minimal base system."
 msgstr ""
-"Ако инсталирате од CD за мрежна инсталација и одберете дека нема да "
-"користите огледало, на крај ќе биде инсталиран само основниот минимален "
-"систем."
+"Ако инсталирате од CD за мрежна инсталација и одберете да не се користи "
+"огледало, на крај ќе го имате само основниот минимален систем."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:10001
-#, fuzzy
 msgid ""
 "You are installing from a netinst CD image, which by itself only allows "
 "installation of a very minimal base system. Use a mirror to install a more "
 "complete system."
 msgstr ""
-"Инсталирате од netinst CD кое што дозволува само инсталација на основен "
-"минимален систем. За да инсталирате комплетен систем послужете се со некој "
-"од огледало серверите."
+"Вие инсталирате од netinst ЦД слика, што само по себе дозволува инсталирање "
+"на многу минимален базен систем. Користете огледало за да инсталирате "
+"поцелосен систем."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:11001
-#, fuzzy
 msgid ""
 "You are installing from an image which contains a limited selection of "
 "packages."
-msgstr "Инсталирате од CD кое што содржи лимитиран избор на пакети."
+msgstr "Инсталирате од слика која што содржи ограничен избор на пакети."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be 2 or 3
 #: ../apt-cdrom-setup.templates:12001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a fair selection of "
 "packages, some may be missing (notably some packages needed to support "
 "languages other than English)."
 msgstr ""
-"Скениравте %i CD-а. Иако овие содржат доста голем избор на пакети некои може "
-"да недостасуваат (на пр. пакети кои што треба да нудат поддршка за други "
-"јазици, освен Англискиот)."
+"Скениравте %i слики. Иако овие содржат доста голем избор на пакети, некои "
+"може да недостасуваат (особено некои пакети потребни за поддршка на јазици "
+"различни од англискиот)."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be from 4 to 8
 #: ../apt-cdrom-setup.templates:13001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a large selection of "
 "packages, some may be missing."
 msgstr ""
-"Скениравте %i CD-а. Иако овие содржат доста големи избор на пакети, некои "
+"Скениравте %i слики. Иако овие содржат доста голем избор на пакети, некои "
 "може да недостасуваат."
 
 #. Type: text
@@ -498,13 +486,12 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:15001
-#, fuzzy
 msgid ""
 "You are installing from a DVD image. Even though it contains a large "
 "selection of packages, some may be missing."
 msgstr ""
-"Инсталирате од DVD. Иако DVD-то содржи голем број на пакети, некои може да "
-"недостасуваат."
+"Вие инсталирате од DVD слика. Иако тоа содржи голем број на пакети, некои "
+"може да недостасуваат."
 
 #. Type: text
 #. Description
@@ -538,15 +525,52 @@ msgstr "Скенирање на алтернативната локација...
 
 #. Type: boolean
 #. Description
-#. :sl1:
+#. :sl5:
 #: ../apt-mirror-setup.templates:2001
+msgid "Use non-free firmware?"
+msgstr "Користи не-слободен фирмвер?"
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#: ../apt-mirror-setup.templates:2001
+msgid ""
+"Some non-free firmware has been made to work with Debian. Though this "
+"firmware is not at all a part of Debian, standard Debian tools can be used "
+"to install it. This firmware has varying licenses which may prevent you from "
+"using, modifying, or sharing it."
+msgstr ""
+"Одреден неслободен фирмвер е направен да работи со Debian. Иако овој фирмвер "
+"воопшто не е дел од Debian, може да се инсталира со стандардните Debian "
+"алатки. Овој фирмвер може да има различна лиценца која може да го оневозможи "
+"неговото користење, измена или споделување."
+
+#. Type: boolean
+#. Description
+#. :sl5:
+#. Type: boolean
+#. Description
+#. :sl1:
+#. Type: boolean
+#. Description
+#. This template is used by the Ubuntu version of d-i.
+#. :sl2:
+#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates-ubuntu:1001
+msgid "Please choose whether you want to have it available anyway."
+msgstr "Те молам одбери дали сепак сакаш да го инсталираш."
+
+#. Type: boolean
+#. Description
+#. :sl1:
+#: ../apt-mirror-setup.templates:3001
 msgid "Use non-free software?"
 msgstr "Користни не отворен софтвер?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:2001
+#: ../apt-mirror-setup.templates:3001
 msgid ""
 "Some non-free software has been made to work with Debian. Though this "
 "software is not at all a part of Debian, standard Debian tools can be used "
@@ -561,25 +585,14 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Please choose whether you want to have it available anyway."
-msgstr "Те молам одбери дали сепак сакаш да го инсталираш."
-
-#. Type: boolean
-#. Description
-#. :sl1:
-#: ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates:4001
 msgid "Use contrib software?"
 msgstr "Користи придонесен софтвер?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:3001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Some additional software has been made to work with Debian. Though this "
 "software is free, it depends on non-free software for its operation. This "
@@ -610,7 +623,7 @@ msgstr ""
 #. Description
 #. This template is used by the Ubuntu version of d-i.
 #. :sl2:
-#: ../apt-mirror-setup.templates:3001 ../apt-mirror-setup.templates-ubuntu:2001
+#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
 #: ../apt-mirror-setup.templates-ubuntu:3001
 #: ../apt-mirror-setup.templates-ubuntu:4001
 #: ../apt-mirror-setup.templates-ubuntu:5001
@@ -623,21 +636,21 @@ msgstr "Те молам одбери дали сакаш овој софтвер
 #. :sl2:
 #. These are choices of actions so this is, at least in English,
 #. an infinitive form
-#: ../apt-mirror-setup.templates:4001
+#: ../apt-mirror-setup.templates:5001
 msgid "Change mirror"
 msgstr "Смени алтернативен сервер"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid "Downloading a file failed:"
 msgstr "Преземање на датотека не успеа:"
 
 #. Type: select
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:4002
+#: ../apt-mirror-setup.templates:5002
 msgid ""
 "The installer failed to access the mirror. This may be a problem with your "
 "network, or with the mirror. You can choose to retry the download, select a "
@@ -645,42 +658,41 @@ msgid ""
 "packages from this mirror."
 msgstr ""
 "Инсталерот не успеа да се поврзе со алтернативниот сервер. Ова можеби е "
-"поради проблем со твојата мрежа или со алтернативниот сервер. Може да пробаш "
-"повторно, да одбереш друга локација или да го игнорираш проблемот и да "
-"продолжиш без сите пакети од оваа локација. "
+"поради проблем со вашата мрежа или со алтернативниот сервер. Можете да "
+"пробате повторно, да одберете друга локација или да го игнорирате проблемот "
+"и да продолжите без сите пакети од ова мирор."
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
+#: ../apt-mirror-setup.templates:6001
 msgid "Use a network mirror?"
 msgstr "Да користам алтернативна мрежна локација?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
-#: ../apt-mirror-setup.templates:5001
-#, fuzzy
+#: ../apt-mirror-setup.templates:6001
 msgid ""
 "A network mirror can be used to supplement the software that is included on "
 "the installation media. This may also make newer versions of software "
 "available."
 msgstr ""
-"Може да се користи алтернативна мрежна локација како дополнителен извор на "
-"програми покрај оние на овој CD-ROM. На мрежната локација може да има и "
-"понови верзии на програмите."
+"Мрежно огледало може да се употреби за да се додаде врз софтверот што е "
+"вклучен во медијата за инсталација. Ова може да расположи понови верзии на "
+"програми."
 
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "Continue without a network mirror?"
 msgstr "Да продолжам без мрежно огледало?"
 
 #. Type: boolean
 #. Description
 #. :sl2:
-#: ../apt-mirror-setup.templates:6001
+#: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Не беше избрано мрежно огледало."
 
